[OSE-171][OSE-172] Implement Get and List submissions (#187)
* Added submission get

* spec

* Added simple List support with tests

* spec

* Small cleanup of the get

* micro fixes for consistency

* spec again

* PR comments
